--- a/W8_feature_Lasso_coxPH_Compare_two_groups/3.train_on_features.ipynb
+++ b/W8_feature_Lasso_coxPH_Compare_two_groups/3.train_on_features.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e4f1a96a",
    "metadata": {},
    "outputs": [
@@ -143,8 +143,8 @@
     "\n",
     "print(selected_genes_lasso.shape,selected_genes_comp.shape)\n",
     "\n",
-    "selected_genes_scaled_lasso, age_gene_scaled_lasso = function.gene_exp_scale(selected_genes_lasso, clinical_val, gene_exp)\n",
-    "selected_genes_scaled_comp, age_gene_scaled_comp = function.gene_exp_scale(selected_genes_comp, clinical_val, gene_exp)\n"
+    "# selected_genes_scaled_lasso, age_gene_scaled_lasso = function.gene_exp_scale(selected_genes_lasso, clinical_val, gene_exp)\n",
+    "# selected_genes_scaled_comp, age_gene_scaled_comp = function.gene_exp_scale(selected_genes_comp, clinical_val, gene_exp)\n"
    ]
   },
   {
@@ -198,8 +198,9 @@
     "    time=y['Time to event if any (days)'].values\n",
     ")\n",
     "\n",
-    "X_lasso = pd.concat([selected_genes_scaled_lasso, clinical_val[['Risk Group','Menospausal Status']]],axis=1)\n",
-    "X_comp = pd.concat([selected_genes_scaled_comp, clinical_val[['Risk Group','Menospausal Status']]],axis=1)\n",
+    "X_lasso = function.gene_exp_scale(selected_genes_lasso, clinical_val, gene_exp)\n",
+    "X_comp = function.gene_exp_scale(selected_genes_comp, clinical_val, gene_exp)\n",
+    "\n",
     "\n",
     "X_lasso = pd.get_dummies(X_lasso, columns=['Menospausal Status','Risk Group'], drop_first=True)\n",
     "X_comp = pd.get_dummies(X_comp, columns=['Menospausal Status','Risk Group'], drop_first=True)\n",
